# mycelium-std-ternary

./: CROSS-REF.md  Cargo.toml  README.md
docs/spec/stdlib/: ternary.md
src/: arithmetic.rs  lib.rs
src/tests/: arithmetic.rs  mod.rs
