[package]
name = "mycelium-std-ternary"
version.workspace = true
description = "std.ternary — balanced ternary + bit/trit capability surface (M-517)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
